# mork-uni-join

./: ADAM.md  Cargo.toml  README.md  reproduce.sh
examples/: adam_repro.rs  bench.rs  demo.rs
proofs/: ROOT
src/: antiunify.rs  corpus.rs  join.rs  lib.rs  oracle.rs  prolog.rs  quantale.rs  randgen.rs  scored.rs  semiring.rs  string_fuzzy.rs  term.rs  trie.rs  trie_join.rs  unify.rs  unijoin.rs  wcojoin.rs  zorder.rs
tests/: against_real_mork.rs  mork_fixture.txt  order_independence.rs  prolog_seal.rs  trie_join_differential.rs
